<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
            android:title="@string/category_support">

		<Preference
				android:key="support_preference"
				android:title="@string/support_preference"
				android:summary="@string/support_text">
    			<intent android:action="android.intent.action.VIEW"
            	android:data="http://forum.xda-developers.com/xposed/modules/mod-xperia-camera-enhancements-t3260643" />
		</Preference>

	</PreferenceCategory>

    <PreferenceCategory
            android:title="@string/category_misc_preferences">

        <CheckBoxPreference
                android:key="launcher_preference"
                android:title="@string/title_launcher_preference"
                android:summary="@string/summary_launcher_preference"
                android:defaultValue="true" />

        <CheckBoxPreference
                android:key="filename_preference"
                android:title="@string/title_filename_preference"
                android:summary="@string/summary_filename_preference"
                android:defaultValue="true" />

		<CheckBoxPreference
                android:key="capture_mode_preference"
                android:title="@string/title_capture_mode_preference"
                android:summary="@string/summary_capture_mode_preference"
				android:defaultValue="false" />

		<CheckBoxPreference
                android:key="always_manual_preference"
                android:title="@string/title_always_manual_preference"
                android:summary="@string/summary_always_manual_preference"
				android:defaultValue="false" />

	</PreferenceCategory>
	
	<PreferenceCategory
            android:title="@string/category_location_preferences">
	
        <CheckBoxPreference
                android:key="geotag_preference"
                android:title="@string/title_geotag_preference"
                android:summary="@string/summary_geotag_preference"
				android:defaultValue="true" />

        <CheckBoxPreference
                android:key="system_location_preference"
                android:title="@string/title_system_location_preference"
                android:summary="@string/summary_system_location_preference"
				android:defaultValue="false" />
				
		<ListPreference
            android:key="location_mode_preference"
            android:title="@string/title_location_mode_preference"
            android:defaultValue="0"
            android:entries="@array/locationArray"
            android:entryValues="@array/locationValues" />

        <CheckBoxPreference
                android:key="disable_system_location_preference"
                android:title="@string/title_disable_system_location_preference"
                android:summary="@string/summary_disable_system_location_preference"
				android:defaultValue="false" />
				
        <CheckBoxPreference
                android:key="mod_icon_preference"
                android:title="@string/title_mod_icon_preference"
                android:summary="@string/summary_mod_icon_preference"
				android:defaultValue="true" />
				
     </PreferenceCategory>

 </PreferenceScreen>